syntax = "proto3";

package es.v1;

option go_package = "./api/proto/src";

message EsRequest{
  uint32 user_id = 1;
  string segment = 2;
}
message EsResponse{
  string response = 1;
}
message EstimationRequest{
  string segment = 1;
}

message EstimationResponse{
  uint32 estimation = 1;
}

service EsService{
  rpc EsSaveSegmentTag(EsRequest) returns(EsResponse){};
  rpc Estimation(EstimationRequest) returns(EstimationResponse){};
}